RESOLVED FIXED 247022
Fix CSSKeywordValue serialization to properly escape identifier
https://bugs.webkit.org/show_bug.cgi?id=247022
Summary Fix CSSKeywordValue serialization to properly escape identifier
Chris Dumez
Reported 2022-10-25 13:19:55 PDT
Fix CSSKeywordValue serialization to properly escape identifier.
Attachments
Chris Dumez
Comment 1 2022-10-25 13:21:23 PDT
EWS
Comment 2 2022-10-26 10:10:35 PDT
Committed 256022@main (3f16ccf37cb5): <https://commits.webkit.org/256022@main> Reviewed commits have been landed. Closing PR #5772 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-26 10:11:26 PDT
Note You need to log in before you can comment on or make changes to this bug.