Fix CSSKeywordValue serialization to properly escape identifier https://bugs.webkit.org/show_bug.cgi?id=247022

Reviewed by Antti Koivisto.

Fix CSSKeywordValue serialization to properly escape identifier.

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/stylevalue-serialization/cssKeywordValue.tentative-expected.txt:
* Source/WebCore/css/typedom/CSSKeywordValue.cpp:
(WebCore::CSSKeywordValue::serialize const):

Canonical link: https://commits.webkit.org/256022@main